# ultimate_nag52

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Getting Started.md  README.md  _config.yml  can_frame.h  extern_frames.cpp  extern_frames.h  flags.h  gearbox_brain.cpp  gearbox_brain.h  gen_unions.py  index.md  nag_iface.h  profiles.cpp  profiles.h  signals_io.md  ultimate-nag52.ino  ultimate_nag52.ino
.github/: FUNDING.yml
.github/workflows/: rust.yml
Addon Boards/1.3 Tcc Zener mod/: README.md  bom.csv  mount_model.stl  p&p.csv
FIRMWARE/: platformio.ini
FIRMWARE/include/: CONFIG.h  dtcs.h  eeprom_config.h
FIRMWARE/lib/can_frames/: ART_258.h  BS_200.h  BS_270.h  BS_328.h  GS_338.h  GS_419_CUSTOM.h  LRW_236.h  MRM_238.h  MS_308.h  MS_312.h  MS_608.h  PSM_3B4.h  can_frames.cpp  can_frames.h
FIRMWARE/lib/diag/: kwp2000.h
FIRMWARE/src/: dtcs.cpp  main.cpp  pins.h
FIRMWARE/src/can_network/: can_manager.cpp  can_manager.h
FIRMWARE/src/diag/: kwp2000.cpp  kwp2000.h  kwp_structs.h
FIRMWARE/src/gearbox/: sensors.cpp  sensors.h
FIRMWARE/src/scn/: scn.cpp  scn.h
FIRMWARE/src/solenoids/: solenoids.cpp  solenoids.h
PCB/: README.md
PCB Revisions/: index.md
PCB/v1.1/: BOM_1.1.csv  P&P_1.1.csv
PCB/v1.2/: BOM_1.2.csv  P&P_1.2.csv
PCB/v1.3/: BOM_1_3.xlsx  P&P_1.3.csv
SIM/: CMakeLists.txt
SIM/simulator/canbus/: car_sim.cpp  car_sim.h
SIM/simulator/ecus/: abstract_ecu.cpp  abstract_ecu.h
SIM/simulator/ecus/bs/: abs_esp.cpp  abs_esp.h
SIM/simulator/ecus/gs/: nag52.h
SIM/simulator/ecus/ms/: engine.h
SIM/simulator/v_kombi/: Needle.cpp  lcd_symbols.cpp  virtual_kombi.h
SIM/simulator/v_kombi/img/lcd/: ascii_big_std.xcf  p.xcf  p_highlight.xcf
TCUConfig/: index.md
_includes/: egs51.md  egs52.md  egs53.md
can_forwarder/: can_forwarder.ino
can_frames/: ART_250.h  BS_208.h  BS_300.h  EWM_230.h  EZS_A5.h  GS_218.h  GS_418.h  MS_210.h  MS_212.h  MS_268.h  MS_2F3.h  PSM_3B8.h  SBW_232.h  can_c_enums.h  can_frames.cpp  can_frames.h
canframes/ART/: ART_250.h  ART_258.h
canframes/BS/: BS_200.h  BS_208.h  BS_270.h  BS_300.h  BS_328.h
canframes/EWM/: EWM_230.h
canframes/EZS/: EZS_A5.h
canframes/GS/: GS_218.h  GS_338.h  GS_418.h  README.md  enums.h
canframes/MS/: MS_210.h  MS_212.h  MS_268.h  MS_2F3.h  MS_308.h  MS_312.h  MS_608.h  README.md
canframes/PSM/: PSM_3B4.h  PSM_3B8.h
canframes/SBW/: SBW_232.h
case_models/: case_v1.blend  case_v1.blend1  case_v3.stl  v1.FCStd  v1.FCStd1  v2.FCStd  v2.FCStd1
config_app/: Cargo.toml  debug_crash.sh  dump.elf  note
config_app/src/: main.rs  window.rs
config_app/src/ui/: crashanalyzer.rs  firmware_update.rs  io_maipulator.rs  launcher.rs  main.rs  mod.rs  status_bar.rs
config_app/src/ui/configuration/: cfg_structs.rs  mod.rs
config_app/src/ui/diagnostics/: mod.rs  rli.rs  shift_reporter.rs  solenoids.rs
config_app/src/ui/map_editor/: help_view.rs  map_list.rs  map_widget.rs  mod.rs
config_app/src/ui/routine_tests/: mod.rs  solenoid_test.rs
config_app/src/ui/widgets/: mod.rs  range_display.rs
config_app/src/usb_hw/: diag_usb.rs  mod.rs  scanner.rs
config_app/src/usb_hw/flasher/: bin.rs  elf_file.rs  esp_loader.rs  mod.rs  slip_reader.rs
ecu_can_simulator/: .gitignore  CMakeLists.txt  main.cpp
ecu_can_simulator/canbus/: can_frame.h  can_sim.cpp  can_sim.h  car_sim.cpp  car_sim.h  esp32_forwarder.cpp  esp32_forwarder.h
ecu_can_simulator/ecus/: abstract_ecu.h  extern_frames.cpp  extern_frames.h
ecu_can_simulator/ecus/bs/: abs_esp.cpp  abs_esp.h
ecu_can_simulator/ecus/ewm/: ewm.cpp  ewm.h
ecu_can_simulator/ecus/gs/: nag52.cpp  nag52.h  nag52_emulator.cpp  nag52_emulator.h  nag_iface.h
ecu_can_simulator/ecus/ms/: engine.cpp  engine.h
ecu_can_simulator/v_kombi/: Needle.cpp  kombi_lcd.cpp  kombi_lcd.h  lcd_symbols.cpp  lcd_symbols.h  virtual_kombi.cpp  virtual_kombi.h
ecu_can_simulator/v_kombi/img/: abs.xcf  beam.xcf  esp.xcf  handbrake.xcf  needle_large.xcf  needle_small.xcf  srs.xcf
ecu_can_simulator/v_kombi/img/lcd/: ascii_small_std.xcf
esp32_can_sender/: esp32_can_sender.ino
firmware/: A0.h  README.md  firmware.ino  gen_unions.py  include.h
firmware/canframes/: GS_218.h  GS_338.h  GS_418.h  enums.h
firmware/canframes/ART/: ART_250.h  ART_258.h
firmware/canframes/BS/: BS_200.h  BS_208.h  BS_270.h  BS_300.h  BS_328.h
firmware/canframes/EWM/: EWM_230.h
firmware/canframes/GS/: GS_338.h  GS_418.h
firmware/canframes/MS/: MS_210.h  MS_212.h  MS_268.h  MS_2F3.h  MS_308.h  MS_312.h  MS_608.h
firmware/canframes/PSM/: PSM_3B4.h  PSM_3B8.h
firmware/canframes/SBW/: SBW_232.h
gearbox/: gearbox_brain.cpp  gearbox_brain.h  helper.h  nag_iface.h  profiles.cpp  profiles.h  shift_api.cpp  shift_api.h
images/: egs52.xcf
simulator/: .gitignore  main.cpp  simulator.cpp
simulator/canbus/: car_sim.cpp  car_sim.h  esp32_forwarder.cpp  esp32_forwarder.h
simulator/ecus/: ecus.h
simulator/ecus/bs/: abs_esp.cpp
simulator/ecus/ewm/: ewm.cpp  ewm.h
simulator/ecus/gs/: nag52.cpp  nag52.h
simulator/ecus/ms/: engine.cpp  engine.h
simulator/v_kombi/: diag_overlay.cpp  diag_overlay.h  kombi_lcd.cpp  lcd_symbols.cpp  virtual_kombi.cpp  virtual_kombi.h
simulator/v_kombi/img/: abs.xcf  needle_small.xcf  srs.xcf
