[package]
name = "config_app"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.79" }
serde = { version = "1.0.137", features = ["derive"] }
ecu_diagnostics="0.90.51"
#ecu_diagnostics = {path="../../ecu_diagnostics"}
image = "0.24.1"
serial-rs = {git="https://github.com/rnd-ash/serial-rs"}
nfd="0.0.4"
pollster = "0.2.5"
eframe = "0.19.0"
egui_extras = "0.19.0"
modular-bitfield = "0.11.2"
static_assertions = "1.1.0"
env_logger="0.9.0"

[profile.release]
debug = true