[package]
name = "config_app"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "config_app"
path = "src/main.rs"

[dependencies]
serde_json = { version = "1.0.89" }
serde = { version = "1.0.148", features = ["derive"] }
ecu_diagnostics="0.90.52"
image = "0.24.5"
serial-rs = {git="https://github.com/rnd-ash/serial-rs"}
nfd="0.0.4"
pollster = "0.2.5"
eframe = {version="0.19.0", features=["wgpu"]}
egui_extras = "0.19.0"
modular-bitfield = "0.11.2"
static_assertions = "1.1.0"
env_logger="0.10.0"
egui-toast="0.4.0"
chrono = "0.4.23"
nom="7.1.1"